# artifacts/api-server/src/routes/index.ts
@@ -4,7 +4,9 @@ import configRouter from "./config";
 import mentorApplicationsRouter from "./mentor-applications";
 import mentorsRouter from "./mentors";
 import jobListingsRouter from "./job-listings";
+import jobCategoriesRouter from "./job-categories";
 import startupApplicationsRouter from "./startup-applications";
+import startupPostsRouter from "./startup-posts";
 import creativeWorksRouter from "./creative-works";
 import creativeSubmissionsRouter from "./creative-submissions";
 import humanitiesRouter from "./humanities";
@@ -17,7 +19,9 @@ router.use(configRouter);
 router.use(mentorApplicationsRouter);
 router.use(mentorsRouter);
 router.use(jobListingsRouter);
+router.use(jobCategoriesRouter);
 router.use(startupApplicationsRouter);
+router.use(startupPostsRouter);
 router.use(creativeWorksRouter);
 router.use(creativeSubmissionsRouter);
 router.use(humanitiesRouter);
